--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-preprocess": "^1.1.1",
     "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "^0.7.1",
+    "gulp-sass": "^1.3.3",
     "multipipe": "^0.1.1",
     "reactify": "^0.17.1",
     "tiny-lr": "0.0.5",
