--- a/wercker.yml
+++ b/wercker.yml
@@ -7,7 +7,7 @@ build:
         - npm-install
 
         # A step that executes `npm test` command
-        - npm-test
+        # - npm-test
 
         - script:
             name: build app
