--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vinyl-transform": "0.0.1"
   },
   "dependencies": {
+    "express": "^4.12.3",
     "flux": "^2.0.1",
     "object-assign": "^2.0.0"
   }
