--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "bower": "^1.4.1",
     "browserify": "^5.10.1",
     "connect-livereload": "~0.3.2",
-    "express": "~3.4.8",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "0.0.7",
     "gulp-livereload": "^0.3.2",
@@ -38,6 +37,9 @@
     "reactify": "^0.17.1",
     "tiny-lr": "0.0.5",
     "vinyl-transform": "0.0.1"
+  },
+  "engines": {
+    "node": "~0.10"
   },
   "dependencies": {
     "express": "^4.12.3",
