--- a/package.json
+++ b/package.json
@@ -21,22 +21,32 @@
   },
   "homepage": "https://github.com/rhofmann/richat.io.git",
   "devDependencies": {
+    "assertion": "^1.2.18",
+    "babel": "^5.0.12",
+    "babel-eslint": "^2.0.2",
+    "babelify": "^6.0.2",
     "bower": "^1.4.1",
-    "browserify": "^5.10.1",
-    "connect-livereload": "~0.3.2",
+    "browser-sync": "^2.5.3",
+    "browserify": "^9.0.8",
+    "browserify-shim": "^3.8.5",
+    "chai": "^2.2.0",
     "gulp": "^3.8.11",
-    "gulp-autoprefixer": "0.0.7",
-    "gulp-livereload": "^0.3.2",
-    "gulp-notify": "^1.2.5",
-    "gulp-plumber": "~0.5.6",
-    "gulp-preprocess": "^1.1.1",
-    "gulp-rename": "^1.2.0",
-    "gulp-ruby-sass": "^0.7.1",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-eslint": "^0.8.0",
+    "gulp-if": "^1.2.5",
+    "gulp-jshint": "^1.10.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.0",
     "gulp-sass": "^1.3.3",
-    "multipipe": "^0.1.1",
-    "reactify": "^0.17.1",
-    "tiny-lr": "0.0.5",
-    "vinyl-transform": "0.0.1"
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-streamify": "0.0.5",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
+    "jshint-stylish": "^1.0.1",
+    "reactify": "^1.1.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.1.0"
   },
   "engines": {
     "node": "~0.10"
@@ -44,6 +54,8 @@
   "dependencies": {
     "express": "^4.12.3",
     "flux": "^2.0.1",
+    "immutable": "^3.7.2",
+    "react": "^0.13.1",
     "object-assign": "^2.0.0"
   }
 }
