--- a/wercker.yml
+++ b/wercker.yml
@@ -7,7 +7,7 @@ build:
         - script:
             name: build all the things
             code: |
-                npm cache clear
+                npm cache clean
                 npm install
                 node_modules/.bin/bower install --config.interactive=false
                 node_modules/.bin/gulp dist
