--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-jshint": "^1.10.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-streamify": "0.0.5",
