--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-public/libs
+bower_components
 node_modules
 dist
 tmp
@@ -6,35 +6,5 @@ test/coverage
 test/results
 .tmp
 .sass-cache
-app/bower_components
-target/
-build/
-.gradle
-datanucleus.log
 .DS_Store
-out
-*.iml
-*.ipr
-*.iws
 .idea
-.settings
-.classpath
-.project
-.htaccess
-404.html
-robots.txt
-*.sublime-*
-public/dist/
-test/coverage
-src/main/webapp
-allclasses-frame.html
-allclasses-noframe.html
-constant-values.html
-deprecated-list.html
-help-doc.html
-overview-frame.html
-overview-summary.html
-overview-tree.html
-package-list
-temp/
-public/libs/
