change deployment of statics to S3

--- a/wercker.yml
+++ b/wercker.yml
@@ -20,4 +20,9 @@ build:
 
 deploy:
     steps:
-        - heroku-deploy
+        - s3sync:
+            source_dir: dist/
+            delete-removed: true
+            bucket-url: $AWS_BUCKET_URL
+            key-id: $AWS_ACCESS_KEY_ID
+            key-secret: $AWS_SECRET_ACCESS_KEY
