--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/rhofmann/richat.io.git",
   "devDependencies": {
     "assertion": "^1.2.18",
+    "aws-sdk": "^2.1.23",
     "babel": "^5.0.12",
     "babel-eslint": "^2.0.2",
     "babelify": "^6.0.2",
@@ -31,6 +32,7 @@
     "browserify-shim": "^3.8.5",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-awspublish": "^1.0.6",
     "gulp-eslint": "^0.8.0",
     "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.10.0",
