--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "the best chat app for rich people",
   "main": "./",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec --compilers jsx:src/test/compiler.js src/test/test-helper.js src/test/*test.jsx"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,11 @@
     "url": "https://github.com/rhoffmann/richat.io.git/issues"
   },
   "homepage": "https://github.com/rhofmann/richat.io.git",
+  "browserify": {
+    "transform": [
+      "reactify"
+    ]
+  },
   "devDependencies": {
     "assertion": "^1.2.18",
     "aws-sdk": "^2.1.23",
@@ -44,7 +49,10 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
+    "jest-cli": "^0.4.0",
+    "jsdom": "^5.0.1",
     "jshint-stylish": "^1.0.1",
+    "mocha": "^2.2.4",
     "reactify": "^1.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
@@ -55,9 +63,11 @@
   },
   "dependencies": {
     "express": "^4.12.3",
+    "firebase": "^2.2.4",
     "flux": "^2.0.1",
     "immutable": "^3.7.2",
+    "object-assign": "^2.0.0",
     "react": "^0.13.1",
-    "object-assign": "^2.0.0"
+    "react-tools": "^0.13.1"
   }
 }
