--- a/package.json
+++ b/package.json
@@ -21,15 +21,11 @@
     "url": "https://github.com/rhoffmann/richat.io.git/issues"
   },
   "homepage": "https://github.com/rhofmann/richat.io.git",
-  "browserify": {
-    "transform": [
-      "reactify"
-    ]
-  },
   "devDependencies": {
-    "babel": "^5.0.12",
+    "babel": "^5.1.13",
     "babel-eslint": "^2.0.2",
     "babel-jest": "^5.0.1",
+    "babel-runtime": "^5.1.13",
     "babelify": "^6.0.2",
     "bower": "^1.4.1",
     "browser-sync": "^2.5.3",
@@ -41,7 +37,10 @@
     "gulp-eslint": "^0.8.0",
     "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.10.0",
+    "gulp-load-plugins": "^0.10.0",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-streamify": "0.0.5",
@@ -50,19 +49,23 @@
     "jest-cli": "^0.4.0",
     "jsdom": "^5.0.1",
     "jshint-stylish": "^1.0.1",
-    "reactify": "^1.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.1.0"
   },
   "engines": {
-    "node": "~0.10"
+    "node": "~0.12"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
     "testDirectoryName": "tests",
-    "testFileExtensions": ["js", "jsx"],
-    "testPathDirs" : ["src/js/"],
+    "testFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "testPathDirs": [
+      "src/js/"
+    ],
     "unmockedModulePathPatterns": [
       "<rootDir>/node_modules/react",
       "<rootDir>/node_modules/react-tools"
@@ -71,7 +74,6 @@
   "dependencies": {
     "firebase": "^2.2.4",
     "flux": "^2.0.1",
-    "object-assign": "^2.0.0",
     "react": "^0.13.1",
     "react-tools": "^0.13.1"
   }
