--- a/package.json
+++ b/package.json
@@ -73,7 +73,10 @@
   },
   "dependencies": {
     "firebase": "^2.2.4",
+    "fireproof": "^2.5.2",
     "flux": "^2.0.1",
+    "lodash": "^3.7.0",
+    "q": "^1.3.0",
     "react": "^0.13.1",
     "react-tools": "^0.13.1"
   }
