--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "richat.io",
-  "version": "0.0.1",
-  "description": "the best chat app for rich people",
+  "version": "0.0.2",
+  "description": "react / flux test app",
   "main": "./",
   "scripts": {
-    "test": "node node_modules/jest-cli/bin/jest.js",
+    "test-jest": "node node_modules/jest-cli/bin/jest.js",
+    "test-karma": "node_modules/.bin/karma run",
     "test-mocha": "mocha --reporter spec --compilers jsx:src/test/compiler.js src/test/test-helper.js src/test/*test.js"
   },
   "repository": {
@@ -20,11 +21,23 @@
   "bugs": {
     "url": "https://github.com/rhoffmann/richat.io.git/issues"
   },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "optional": [
+            "runtime",
+            "es7.asyncFunctions"
+          ]
+        }
+      ]
+    ]
+  },
   "homepage": "https://github.com/rhofmann/richat.io.git",
   "devDependencies": {
     "babel": "^5.1.13",
-    "babel-eslint": "^2.0.2",
-    "babel-jest": "^5.0.1",
+    "babel-eslint": "^3.0.1",
     "babel-runtime": "^5.1.13",
     "babelify": "^6.0.2",
     "bower": "^1.4.1",
@@ -46,39 +59,19 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
-    "jest-cli": "^0.4.0",
-    "jsdom": "^5.0.1",
     "jasmine-core": "^2.3.0",
+    "jsdom": "^5.0.1",
+    "jshint-stylish": "^1.0.1",
     "karma-browserify": "^4.1.2",
     "karma-chrome-launcher": "^0.1.8",
-    "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-safari-launcher": "^0.1.1",
     "karma-spec-reporter": "0.0.19",
-    "phantomjs": "^1.9.16",
-    "jshint-stylish": "^1.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.1.0"
   },
   "engines": {
     "node": "~0.12"
-  },
-  "jest": {
-    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
-    "testDirectoryName": "tests",
-    "testFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "testPathDirs": [
-      "src/js/"
-    ],
-    "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react",
-      "<rootDir>/node_modules/react-tools"
-    ]
   },
   "dependencies": {
     "firebase": "^2.2.4",
